--- a/app/index.html
+++ b/app/index.html
@@ -14,17 +14,33 @@
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
     <!-- endbuild -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/bower_components/bootstrap-drawer/dist/css/bootstrap-drawer.min.css" />
 
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
   </head>
-  <body>
+  <body class="has-drawer">
     <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
+    <div id="drawerExample" class="drawer dw-xs-6 dw-sm-4 dw-md-3 fold" aria-labelledby="drawerExample">
+      <div class="drawer-controls">
+        <a href="#drawerExample" data-toggle="drawer" aria-foldedopen="false" aria-controls="drawerExample" class="btn btn-default folded" aria-expanded="false"><i class="fa fa-navicon"></i></a>
+      </div>
+      <div class="drawer-contents">
+          <div class="drawer-heading">
+              <h2 class="drawer-title">Drawer</h2>
+          </div>
+          <div class="drawer-body">
+            <div>First Component</div>
+            <div>Second Component</div>
+            <div>Third Component</div>
+          </div>
+      </div>
+    </div>
     <div class="container-fluid">
       <div class="header">
         <h3 class="text-muted">designalley</h3>
@@ -50,6 +66,7 @@
     <script src="/bower_components/bootstrap/js/dist/tab.js"></script>
     <script src="/bower_components/bootstrap/js/dist/tooltip.js"></script>
     <script src="/bower_components/bootstrap/js/dist/popover.js"></script>
+    <script src="/bower_components/bootstrap-drawer/dist/js/drawer.min.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
