--- a/app/index.html
+++ b/app/index.html
@@ -35,9 +35,7 @@
               <h2 class="drawer-title">Drawer</h2>
           </div>
           <div class="drawer-body">
-            <div>First Component</div>
-            <div>Second Component</div>
-            <div>Third Component</div>
+            <div id="tree"></div>
           </div>
       </div>
     </div>
@@ -67,6 +65,7 @@
     <script src="/bower_components/bootstrap/js/dist/tooltip.js"></script>
     <script src="/bower_components/bootstrap/js/dist/popover.js"></script>
     <script src="/bower_components/bootstrap-drawer/dist/js/drawer.min.js"></script>
+    <script src="/bower_components/bootstrap-treeview/dist/bootstrap-treeview.min.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
