- Added demo for html export functionality - Added service to write html file

--- a/app/index.html
+++ b/app/index.html
@@ -135,6 +135,9 @@
             </div>
         </div>
 
+        <!-- Export Example -->
+        <a class="export-demo" href="#">Export</a>
+
 
 
 <script type="text/javascript">
