--- a/app/index.html
+++ b/app/index.html
@@ -20,12 +20,9 @@
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/jquery-ui/jquery-ui.js"></script>
-    <script src="/bower_components/lodash/dist/lodash.js"></script>
+
     <link rel="stylesheet" href="/bower_components/gridstack/dist/gridstack.css" />
     <link rel="stylesheet" href="/bower_components/gridstack/dist/gridstack-extra.css" />
-    <script src="/bower_components/gridstack/dist/gridstack.js"></script>
 
     <style type="text/css">
             #grid1 {
@@ -109,79 +106,38 @@
 
 
     <div class="container-fluid">
-            <h1>Two grids demo</h1>
+        <h1>Two grids demo</h1>
 
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="sidebar">
-                        <div class="grid-stack-item ui-draggable" style="position: relative;"><div class="grid-stack-item-content ui-draggable-handle">Drag me</div></div>
-                    </div>
-                </div>
-                <div class="col-md-9">
-                    <div class="trash ui-droppable">
-                    </div>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="sidebar">
+                    <div class="grid-stack-item ui-draggable" style="position: relative; left: 0px; top: 0px;"><div class="grid-stack-item-content ui-draggable-handle">Drag me</div></div>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="grid-stack grid-stack-6 grid-stack-instance-3166 ui-droppable" id="grid1" data-gs-current-height="3" style="height: 220px;">
-                    <div data-gs-x="0" data-gs-y="0" data-gs-width="2" data-gs-height="1" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div><div data-gs-x="3" data-gs-y="0" data-gs-width="3" data-gs-height="1" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div><div data-gs-x="2" data-gs-y="0" data-gs-width="1" data-gs-height="1" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div><div data-gs-x="0" data-gs-y="1" data-gs-width="6" data-gs-height="1" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div></div>
-                </div>
-                <div class="col-md-6">
-                    <div class="grid-stack grid-stack-6 grid-stack-instance-3166 ui-droppable" id="grid2" data-gs-current-height="6" style="height: 460px;">
-                    <div data-gs-x="1" data-gs-y="0" data-gs-width="2" data-gs-height="2" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div><div data-gs-x="3" data-gs-y="1" data-gs-width="1" data-gs-height="2" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div><div data-gs-x="4" data-gs-y="1" data-gs-width="1" data-gs-height="1" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div><div data-gs-x="2" data-gs-y="3" data-gs-width="3" data-gs-height="1" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div><div data-gs-x="2" data-gs-y="5" data-gs-width="1" data-gs-height="1" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div></div>
+            <div class="col-md-9">
+                <div class="trash ui-droppable">
                 </div>
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-6">
+                <div class="grid-stack grid-stack-6 grid-stack-instance-3166 ui-droppable" id="grid1" data-gs-current-height="4" style="height: 300px;">
+                <div data-gs-x="0" data-gs-y="0" data-gs-width="2" data-gs-height="1" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div><div data-gs-x="3" data-gs-y="0" data-gs-width="3" data-gs-height="1" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div><div data-gs-x="0" data-gs-y="1" data-gs-width="6" data-gs-height="1" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div><div data-gs-x="0" data-gs-y="2" data-gs-width="6" data-gs-height="1" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div></div>
+            </div>
+            <div class="col-md-6">
+                <div class="grid-stack grid-stack-6 grid-stack-instance-3166 ui-droppable" id="grid2" data-gs-current-height="6" style="height: 460px;">
+                <div data-gs-x="1" data-gs-y="0" data-gs-width="2" data-gs-height="2" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div><div data-gs-x="3" data-gs-y="1" data-gs-width="1" data-gs-height="2" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div><div data-gs-x="4" data-gs-y="1" data-gs-width="1" data-gs-height="1" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div><div data-gs-x="2" data-gs-y="3" data-gs-width="3" data-gs-height="1" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div><div data-gs-x="2" data-gs-y="5" data-gs-width="1" data-gs-height="1" class="grid-stack-item ui-draggable ui-resizable ui-resizable-autohide"><div class="grid-stack-item-content ui-draggable-handle"></div><div></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90; display: none;"></div></div></div>
+            </div>
+        </div>
+    </div>
 
 
-<script type="text/javascript">
 
-      $(function () {
-          var options = {
-              width: 6,
-              float: false,
-              removable: '.trash',
-              removeTimeout: 100,
-              acceptWidgets: '.grid-stack-item'
-          };
-          $('#grid1').gridstack(options);
-          $('#grid2').gridstack(_.defaults({
-              float: true
-          }, options));
-
-          var items = [
-              {x: 0, y: 0, width: 2, height: 2},
-              {x: 3, y: 1, width: 1, height: 2},
-              {x: 4, y: 1, width: 1, height: 1},
-              {x: 2, y: 3, width: 3, height: 1},
-              {x: 2, y: 5, width: 1, height: 1}
-          ];
-
-          $('.grid-stack').each(function () {
-              var grid = $(this).data('gridstack');
-
-              _.each(items, function (node) {
-                  grid.addWidget($('<div><div class="grid-stack-item-content" /><div/>'),
-                      node.x, node.y, node.width, node.height);
-              }, this);
-          });
-
-          $('.sidebar .grid-stack-item').draggable({
-              revert: 'invalid',
-              handle: '.grid-stack-item-content',
-              scroll: false,
-              appendTo: 'body'
-          });
-      });
-
-</script>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/tether/dist/js/tether.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
@@ -200,10 +156,18 @@
     <script src="/bower_components/bootstrap/js/dist/popover.js"></script>
     <script src="/bower_components/bootstrap-drawer/dist/js/drawer.min.js"></script>
     <script src="/bower_components/bootstrap-treeview/dist/bootstrap-treeview.min.js"></script>
+    <script src="/bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="/bower_components/lodash/dist/lodash.js"></script>
+    <script src="/bower_components/gridstack/dist/gridstack.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
+    <script src="scripts/gridStack.js"></script>
+
+
+
+
     <!-- endbuild -->
   </body>
 </html>
