- Added export to image functionality - Placed export code in export.js

--- a/app/index.html
+++ b/app/index.html
@@ -79,8 +79,8 @@
         </div>
     </div>
 
-        <!-- Export Example -->
-        <a class="export-demo" href="#">Export</a>
+    <!-- Export Example -->
+    <a class="export-demo" href="#">Export</a>
 
 
 
@@ -88,7 +88,6 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/tether/dist/js/tether.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -112,8 +111,11 @@
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
-    <script src="scripts/main.js"></script>
-    <script src="scripts/gridStack.js"></script>
+     <script src="bower_components/dom-to-image/src/dom-to-image.js"></script>
+     <script src="scripts/FileSaver.js"></script>
+     <script src="scripts/export.js"></script>
+     <script src="scripts/main.js"></script>
+     <script src="scripts/gridStack.js"></script>
 
 
 
