by default drawer should remain open

--- a/app/index.html
+++ b/app/index.html
@@ -35,9 +35,9 @@
     <![endif]-->
   <div class="content-wrapper">
     <div>
-      <div id="drawerExample" class="drawer dw-xs-6 dw-sm-4 dw-md-3 fold" aria-labelledby="drawerExample">
+      <div id="drawerExample" class="drawer dw-xs-6 dw-sm-4 dw-md-3 fold open" aria-labelledby="drawerExample" aria-expanded="true">
         <div class="drawer-controls">
-          <a href="#drawerExample" data-toggle="drawer" aria-foldedopen="false" aria-controls="drawerExample" class="btn btn-default folded" aria-expanded="false"><i class="fa fa-navicon"></i></a>
+          <a href="#drawerExample" data-toggle="drawer" aria-foldedopen="true" aria-controls="drawerExample" class="btn btn-default folded" aria-expanded="true"><i class="fa fa-navicon"></i></a>
         </div>
         <div class="drawer-contents">
           <div class="drawer-heading">
