--- a/app/index.html
+++ b/app/index.html
@@ -33,29 +33,21 @@
   <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-  <div class="content-wrapper">
-    <div>
-      <div id="drawerExample" class="drawer dw-xs-6 dw-sm-4 dw-md-3 fold open" aria-labelledby="drawerExample" aria-expanded="true">
-        <div class="drawer-controls">
-          <a href="#drawerExample" data-toggle="drawer" aria-foldedopen="true" aria-controls="drawerExample" class="btn btn-default folded" aria-expanded="true"><i class="fa fa-navicon"></i></a>
+    <div id="drawerExample" class="drawer dw-xs-6 dw-sm-4 dw-md-3 dw-lg-3 fold open" aria-labelledby="drawerExample" aria-expanded="true">
+      <div class="drawer-controls">
+        <a href="#drawerExample" data-toggle="drawer" aria-foldedopen="true" aria-controls="drawerExample" class="btn btn-default folded" aria-expanded="true"><i class="fa fa-navicon"></i></a>
+      </div>
+      <div class="drawer-contents">
+        <div class="drawer-heading">
+          <h2 class="drawer-title">Drawer</h2>
         </div>
-        <div class="drawer-contents">
-          <div class="drawer-heading">
-            <h2 class="drawer-title">Drawer</h2>
-          </div>
-          <div class="drawer-body">
+        <div class="drawer-body">
 
-          </div>
         </div>
       </div>
     </div>
-    <div>
 
-
-
-
-      <div id="main-container" class="container-fluid">
-
+    <div id="main-container" class="container-fluid">
         <div class="row">
           <div class="col-md-3">
             <div class="sidebar">
@@ -69,7 +61,6 @@
             </div>
           </div>
         </div>
-
         <div class="row">
           <div class="col-md-6">
             <div class="grid-stack grid-stack-6 grid-stack-instance-3166 ui-droppable" id="grid1" data-gs-current-height="4" style="height: 300px;">
@@ -125,15 +116,9 @@
             </div>
           </div>
         </div>
-      </div>
-
-      <!-- Export Example -->
-      <a class="export-demo" href="#">Export</a>
     </div>
-  </div>
 
-
-
+    <a class="export-demo" href="#">Export</a>
 
   <!-- build:js scripts/vendor.js -->
   <!-- bower:js -->
