--- a/app/index.html
+++ b/app/index.html
@@ -50,20 +50,11 @@
 
   <div id="main-container" class="container-fluid">
     <div class="row">
-      <div id="div1" class="col-md-4">
-        <div draggable="true" ondragstart="drag(event)" id="drag1">asegftseftgwgftwgtreg</div>
-      </div>
-    </div>
-    <div class="row">
       <div class="col-md-6">
-        <div ondrop="drop(event)" ondragover="allowDrop(event)" class="grid-stack grid-stack-6 grid-stack-instance-3166 ui-droppable" id="grid1" data-gs-current-height="4" style="height: 300px;">
-
-        </div>
+        <div ondrop="drop(event)" ondragover="allowDrop(event)" class="grid-stack grid-stack-6 grid-stack-instance-3166 ui-droppable" id="grid1" data-gs-current-height="4" style="height: 300px;"></div>
       </div>
       <div class="col-md-6">
-        <div ondrop="drop(event)" ondragover="allowDrop(event)" class="grid-stack grid-stack-6 grid-stack-instance-3166 ui-droppable" id="grid2" data-gs-current-height="6" style="height: 460px;">
-
-        </div>
+        <div ondrop="drop(event)" ondragover="allowDrop(event)" class="grid-stack grid-stack-6 grid-stack-instance-3166 ui-droppable" id="grid2" data-gs-current-height="6" style="height: 460px;"></div>
       </div>
     </div>
   </div>
