minor css changes

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,17 @@
   <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a href="#" class="navbar-brand">Design Alley</a>
+      </div>
+      <p class="navbar-text navbar-right"><a href="#" class="navbar-link">Export</a></p>
+    </div>
+  </nav>
+
+
   <div id="drawerExample" class="drawer dw-xs-6 dw-sm-4 dw-md-3 dw-lg-3 fold open" aria-labelledby="drawerExample" aria-expanded="true">
     <div class="drawer-controls">
       <a href="#drawerExample" data-toggle="drawer" aria-foldedopen="true" aria-controls="drawerExample" class="btn btn-default folded" aria-expanded="true"><i class="fa fa-navicon"></i></a>
