- Fixed merge slips

--- a/app/index.html
+++ b/app/index.html
@@ -58,12 +58,10 @@
     </nav>
     <div class="row">
       <div class="col-md-12">
-        <div class="grid-stack grid-stack-6 grid-stack-instance-3166 ui-droppable" id="grid1" data-gs-current-height="4" ></div>
+        <div data-stage class="grid-stack grid-stack-6 grid-stack-instance-3166 ui-droppable" id="grid1" data-gs-current-height="4" ></div>
       </div>
     </div>
   </div>
-
-  <a class="export-demo" href="#">Export</a>
 
   <!-- build:js scripts/vendor.js -->
   <!-- bower:js -->
@@ -73,11 +71,8 @@
   <!-- endbuild -->
 
   <!-- build:js scripts/main.js -->
-  <script src="/bower_components/bootstrap/js/dist/tooltip.js"></script>
   <script src="/bower_components/dom-to-image/dist/dom-to-image.min.js"></script>
-  <script src="/bower_components/bootstrap/js/dist/popover.js"></script>
  <script src="/bower_components/bootstrap-drawer/dist/js/drawer.min.js"></script>
- <script src="/bower_components/bootstrap-treeview/dist/bootstrap-treeview.min.js"></script>
  <script src="/bower_components/jquery-ui/jquery-ui.js"></script>
   <script src="scripts/FileSaver.js"></script>
   <script src="scripts/export.js"></script>
