Adding toaster for save success.

--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,7 @@
   <script src="scripts/FileSaver.js"></script>
   <script src="scripts/export.js"></script>
   <script src="scripts/main.js"></script>
+  <script src="jquery.toaster.js"></script>
   <!-- endbuild -->
 </body>
 
